Created divs for color squares

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    
+    <div id="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
 </body>
 
 </html>
