--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>The Great RGB Color Game</h1>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
@@ -18,6 +19,7 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
+    <script src="colorGame.js"></script>
 </body>
 
 </html>
