--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-
-
+    
     <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
-    <div>
+    <div id="stripe">
         <span id="message"></span>
+        <button>New Colors</button>
     </div>
+
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
