Added a reset functionality to start a new game with new colors

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    
+
     <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
     <div id="stripe">
         <span id="message"></span>
-        <button>New Colors</button>
+        <button id="reset">New Colors</button>
     </div>
 
     <div id="container">
