Added Easy and Hard buttons and gave each classList property "selected"

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div id="stripe">
         <span id="message"></span>
         <button id="reset">New Colors</button>
+        <button id="easyBtn">Easy</button>
+        <button id="hardBtn" class="selected">Hard</button>
+
     </div>
 
     <div id="container">
