--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
 <body>
 
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>
+        The Great 
+        <br>
+        <span id="colorDisplay">RGB</span> 
+        <br>
+        Color Game
+    </h1>
     <div id="stripe">
-        <span id="message"></span>
         <button id="reset">New Colors</button>
+        <span id="message"></span>    
         <button id="easyBtn">Easy</button>
         <button id="hardBtn" class="selected">Hard</button>
 
