--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <h1>
         The Great 
         <br>
@@ -21,11 +20,9 @@
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>    
-        <button id="easyBtn">Easy</button>
-        <button id="hardBtn" class="selected">Hard</button>
-
+        <button class="mode">Easy</button>
+        <button class=" mode selected">Hard</button>
     </div>
-
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
